<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="augmented_reality_tfg_project">Augmented Reality TFG Project</string>
    <string name="miquel_ramis95_gmail_com">miquel.ramis95@gmail.com</string>
    <string name="select_image">Select Image</string>
    <string name="set_user_height">Set User Height</string>
    <string name="debug">Debug</string>
    <string name="logs_disabled">Logs Disabled</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="drop_database">Drop DataBase</string>
</resources>
