<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
            android:id="@+id/nav_select_image"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/select_image" />

    <item android:title="Interaction Mode">
        <menu>
            <item
                android:id="@+id/nav_mode"
                android:icon="@drawable/ic_menu_add_mode"
                android:title="ADD" />
            <item
                android:id="@+id/nav_model_distance"
                android:icon="@drawable/ic_menu_distance_add"
                android:title="Set Creation Distance" />
            <item
                android:title=""
                android:id="@+id/nav_actual_distance"
                android:checkable="false"
                />
            <item
                android:id="@+id/nav_pixel_ratio"
                android:icon="@drawable/ic_menu_pixel_ratio"
                android:title="Set PixelRatio" />
            <item
                android:title=""
                android:id="@+id/nav_actual_pixel_ratio"
                android:checkable="false"
                />
            <item
                android:id="@+id/nav_virtual_rotation"
                android:icon="@drawable/ic_screen_rotation_closed"
                android:title="Rotation Disabled" />
        </menu>
    </item>

    <item android:title="User">
        <menu>
            <item
                android:id="@+id/nav_user_height"
                android:icon="@drawable/ic_menu_height"
                android:title="@string/set_user_height" />
            <item
                android:title=""
                android:id="@+id/nav_actual_height"
                android:checkable="false"
                />
        </menu>
    </item>
    <item android:title="@string/debug">
        <menu>
            <item
                android:id="@+id/nav_debug_logs"
                android:icon="@drawable/ic_menu_logs"
                android:title="@string/logs_disabled" />
            <item
                android:id="@+id/nav_debug_gps"
                android:icon="@drawable/ic_menu_gps_enabled"
                android:checked="true"
                android:title="@string/gps_enabled" />

            <item
                android:id="@+id/nav_gps_type"
                android:checked="false"
                android:title="GPS Mode: LAST" />

            <item
                android:id="@+id/nav_debug_database"
                android:icon="@drawable/ic_menu_database"
                android:title="@string/drop_database" />
        </menu>
    </item>

</menu>
